[gd_scene load_steps=4 format=3 uid="uid://dx6462xqrcjwj"]

[ext_resource type="Theme" uid="uid://71jef1qy2cb2" path="res://assets/main_theme.tres" id="1_845xm"]
[ext_resource type="PackedScene" uid="uid://dtubdhey464c" path="res://lootlocker/ScoreEntry.tscn" id="2_ft7g1"]
[ext_resource type="Script" path="res://lootlocker/ScoresPage.gd" id="2_o54ck"]

[node name="ScoresPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_845xm")
script = ExtResource("2_o54ck")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "Leaderboards
"

[node name="Refresh" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Refresh"

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
text = "Rank
"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(420, 0)
layout_mode = 2
text = "Player
"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Score
"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Scores" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 1000)
layout_mode = 2

[node name="ScoreEntry" parent="VBoxContainer/Scores" instance=ExtResource("2_ft7g1")]
layout_mode = 2

[node name="ScoreEntry10" parent="VBoxContainer/Scores" instance=ExtResource("2_ft7g1")]
layout_mode = 2

[node name="ScoreEntry2" parent="VBoxContainer/Scores" instance=ExtResource("2_ft7g1")]
layout_mode = 2

[node name="ScoreEntry3" parent="VBoxContainer/Scores" instance=ExtResource("2_ft7g1")]
layout_mode = 2

[node name="ScoreEntry4" parent="VBoxContainer/Scores" instance=ExtResource("2_ft7g1")]
layout_mode = 2

[node name="ScoreEntry5" parent="VBoxContainer/Scores" instance=ExtResource("2_ft7g1")]
layout_mode = 2

[node name="ScoreEntry6" parent="VBoxContainer/Scores" instance=ExtResource("2_ft7g1")]
layout_mode = 2

[node name="ScoreEntry7" parent="VBoxContainer/Scores" instance=ExtResource("2_ft7g1")]
layout_mode = 2

[node name="ScoreEntry8" parent="VBoxContainer/Scores" instance=ExtResource("2_ft7g1")]
layout_mode = 2

[node name="ScoreEntry9" parent="VBoxContainer/Scores" instance=ExtResource("2_ft7g1")]
layout_mode = 2

[node name="Spacer4" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerRank" type="Label" parent="VBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
text = "Rank
"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerScore" type="Label" parent="VBoxContainer/HBoxContainer3/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
horizontal_alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer3/VBoxContainer2"]
layout_mode = 2
text = "High Score
"
horizontal_alignment = 1

[node name="Spacer5" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_right = 256

[node name="BackToMenu" type="Button" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Return to Main Menu"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Refresh" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/BackToMenu" to="." method="_on_back_to_menu_pressed"]
